Fix for top nav clipping.

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -4,6 +4,7 @@
 /** Header */
 .navbar {
     position: fixed;
+    z-index: 204;
     top: 0;
     left: 0;
     width: 100%;
